--- a/style.css
+++ b/style.css
@@ -10,10 +10,14 @@ body{
 .main-container{
     display: block;
     
+    
 }
 .main-page{
     display: flex;
+    flex-direction: column;
+    max-width: fit-content;
 }
+
 
 .main-header{
     display: flex;
@@ -21,23 +25,71 @@ body{
     align-items: center;
     margin-top: 1vw;
     margin-left: auto;
+    margin-right: 1vw;
     background-color: white;
     border-radius: 25px;
-    padding-right: 1vw;
-    padding-left: 1vw;
-    width: 9vw;
-    height: 5vw;
+    padding-right: 2vw;
+    padding-left: 2vw;
+    width: 16vw;
+    height: 8vw;
 }
 .main-div{
-    width: 50vw;
-    height: 30vw;
+    height: 70vw;
     overflow: hidden;
+    margin-right: 3vw;
 }
 .main-header img{
-    max-width: 50px;
-    max-height: 50px;
-    
+    max-width: 24px;
+    max-height: 24px;
 }
+
+/* SVG Borders and Lines */
+.top-left-border{
+    position:absolute; 
+    top: 9vw; 
+    left: 5vw;
+}
+.project-list-border{
+    position:absolute; 
+    top: 98vw; 
+    left: 5vw;
+    opacity: .25;
+}
+.project-border{
+    display: none;
+    /*
+    transform: rotate(180deg);
+    position:absolute; 
+    right: 5vw;
+    top: 60vw;*/
+}
+.page-divider{
+    opacity: .25;
+    position:absolute; 
+    top: 70vw; 
+    left: 10vw;
+}
+.page-divider-1{
+    opacity: .25;
+    position:absolute; 
+    top: 70vw; 
+    left: 20vw;
+}
+.page-divider-2{
+    opacity: .25;
+    position:absolute; 
+    top: 70vw; 
+    left: 30vw;
+}
+.page-divider-3{
+    opacity: .25;
+    position:absolute; 
+    top: 70vw; 
+    left: 40vw;
+}
+
+
+
 .selected{
     display: block;
 }
@@ -48,8 +100,7 @@ body{
     width: auto;
     display: flex;
     flex-direction: column;
-    margin-top: 10vw;
-    margin-left: auto;
+    margin-left: 6vw;
     margin-right: auto;
     color: white;
     background-color: black;
@@ -57,13 +108,13 @@ body{
 .main-projects-header{
     font-family: 'Ubuntu', sans-serif;
 }
-.project-list{
-    font-family: 'Ubuntu', sans-serif;
+.main-projects-header h2{
+    margin: 0;
 }
 
 .welcome-header{
     font-family: 'Ubuntu', sans-serif;
-    margin-left: 5vw;
+    margin-left: 8vw;
 }
 .welcome-div{
     color: white;
@@ -71,9 +122,14 @@ body{
 .welcome-intro{
     margin-left: 8vw;
     font-family: 'Ubuntu', sans-serif;
+    font-size: 12px;
 }
-.project-border{
-    transform: rotate(180deg);
+
+
+/* Project Div Stles */
+.project-list{
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 3vw;
 }
 .project-1-link, .project-2-link{
     padding-bottom:  1rem;
@@ -84,18 +140,17 @@ body{
 }
 .project-info-header{
     color: white;
-    margin-left: 5vw;
+    margin-left: 8vw;
     font-family: 'Ubuntu', sans-serif;
 }
-.project-list-border{
-    opacity: .33;
-}
+
 .project-info-div{
     animation: moveleft 1s 1 normal forwards;
 }
 .project-info{
     color: white;
     margin-left: 10vw;
-    padding-top: 1rem;
+    margin-right: 3vw;
     font-family: 'Ubuntu', sans-serif;
+    font-size: 12px;
 }
