--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body{
     width: 16vw;
     height: 8vw;
     font-family: 'Ubuntu', sans-serif;
+    box-shadow: 0px 0px 15px 5px #4CBB17;
 }
 .main-div{
     height: 80vw;
@@ -213,7 +214,7 @@ body{
     }
     .main-header{
         height: 4vw;
-        width: 8vw;
+        width: 7vw;
         padding-right: 1vw;
         padding-left: 1vw;
     }
@@ -285,9 +286,7 @@ body{
     .project-border{
         display: block;
         transform: rotate(180deg);
-        position:absolute; 
-        right: 6vw;
-        top: 42vw;
+        margin-left: 12vw;
 
     }
     .project-links {
