--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ body{
 
 .project-links{
     display: flex;
-    justify-content: space-between;
     width: 40vw;
     margin-left: auto;
     margin-right: auto;
@@ -136,9 +135,7 @@ body{
     border-radius: 24px;
     margin-right: 1vw;
     font-family: 'Ubuntu', sans-serif;
-}
-.live-link a{
-    text-decoration: none;
+    box-shadow: 0px 0px 15px 5px #4CBB17;
     color: black;
     font-weight: bold;
 }
@@ -152,11 +149,12 @@ body{
     border-radius: 24px;
     margin-right: 1vw;
     font-family: 'Ubuntu', sans-serif;
-}
-.github-link a{
-    text-decoration: none;
+    box-shadow: 0px 0px 15px 5px #4CBB17;
     color: black;
     font-weight: bold;
+}
+a{
+    text-decoration: none;
 }
 
 .welcome-header{
@@ -177,13 +175,16 @@ body{
 .project-list{
     font-family: 'Ubuntu', sans-serif;
     margin-left: 3vw;
+    width: fit-content;
 }
-.project-1-link, .project-2-link{
+.project-1-link, .project-2-link, .project-3-link{
     padding-bottom:  1rem;
+    border-bottom: 3px solid black;
 }
 .project-1-link:hover, .project-2-link:hover, .project-3-link:hover{
     font-weight: bold;
     cursor: pointer;
+    border-bottom: 3px solid #4CBB17;
 }
 .project-info-header{
     color: white;
@@ -210,7 +211,7 @@ body{
         display: flex;
         flex-direction: row;
         width: 100vw;
-        height: 100vw;
+        height: 100vh;
     }
     .main-header{
         height: 4vw;
@@ -248,7 +249,7 @@ body{
         font-size: large;
     }
     .main-projects{
-        margin-top: 24vw;
+        margin-top: 20vw;
         margin-left: 8vw;
     }
     .projects-header-divider{
@@ -256,7 +257,7 @@ body{
     }
     .project-list-border {
         position: absolute;
-        top: 26vw;
+        top: 22vw;
         left: 70vw;
         opacity: .25;
     }
@@ -267,19 +268,19 @@ body{
     }
     .project-list-border-top{
         position:absolute; 
-        top: 31vw; 
+        top: 26vw; 
         left: 70vw;
         opacity: .25;
     }
     .project-list-border-center{
         position:absolute; 
-        top: 35vw; 
+        top: 30vw; 
         left: 70vw;
         opacity: .25;
     }
     .project-list-border-bottom{
         position:absolute; 
-        top: 39vw; 
+        top: 34vw; 
         left: 70vw;
         opacity: .25;
     }
@@ -290,7 +291,7 @@ body{
 
     }
     .project-links {
-        width: 20vw;
+        justify-content: flex-end;
     }
     .github-link{
         height: 4vw;
@@ -299,11 +300,15 @@ body{
     .live-link{
         height: 4vw;
         width: 9vw;
+        margin-right: 2rem;
     }
     .main-bottom-border{
         display: block;
         opacity: .25;
         margin-top: 2vw;
         margin-left: 35vw;
+    }
+    .page-divider{
+        display: none;
     }
   }
