--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ body{
 /* SVG Borders and Lines */
 .top-left-border{
     position:absolute; 
-    top: 1vw; 
-    left: 1vw;
+    top: 4vh; 
+    left: 3vw;
 }
 .project-list-border{
     position:absolute; 
@@ -133,7 +133,7 @@ body{
     height: 8vw;
     background-color: white;
     border-radius: 24px;
-    margin-right: 1vw;
+    margin-right: 5vw;
     font-family: 'Ubuntu', sans-serif;
     box-shadow: 0px 0px 15px 5px #4CBB17;
     color: black;
